# skbinday

./: README.md  pyproject.toml  setup.py
skbinday/: command_line.py  emailtemplate.py  skbinday.py
